src/grammar/AsmY86Parser.java
// $ANTLR 3.4 /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g 2012-02-21 14:12:43

package grammar;

import isa.Memory;
import isa.MemoryCell;
import isa.Instruction;
import isa.Datum;
import arch.y86.isa.Assembler;
import arch.y86.machine.AbstractY86CPU;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class AsmY86Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Character", "Comment", "CommentZ", "Decimal", "Digit", "Hex", "HexDigit", "Identifier", "NewLine", "WS", "'$'", "'%eax'", "'%ebp'", "'%ebx'", "'%ecx'", "'%edi'", "'%edx'", "'%esi'", "'%esp'", "'('", "')'", "'*'", "','", "'-'", "'.align'", "'.byte'", "'.long'", "'.pos'", "'.word'", "':'", "'addl'", "'andl'", "'call'", "'cmove'", "'cmovg'", "'cmovge'", "'cmovl'", "'cmovle'", "'cmovne'", "'divl'", "'halt'", "'iaddl'", "'iandl'", "'idivl'", "'imodl'", "'imull'", "'irmovl'", "'isubl'", "'ixorl'", "'je'", "'jg'", "'jge'", "'jl'", "'jle'", "'jmp'", "'jne'", "'leave'", "'modl'", "'mrmovl'", "'mull'", "'nop'", "'popl'", "'pushl'", "'ret'", "'rmmovl'", "'rrmovl'", "'subl'", "'xorl'"
    };

    public static final int EOF=-1;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int Character=4;
    public static final int Comment=5;
    public static final int CommentZ=6;
    public static final int Decimal=7;
    public static final int Digit=8;
    public static final int Hex=9;
    public static final int HexDigit=10;
    public static final int Identifier=11;
    public static final int NewLine=12;
    public static final int WS=13;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AsmY86Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AsmY86Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return AsmY86Parser.tokenNames; }
    public String getGrammarFileName() { return "/Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g"; }


    public enum LineType {INSTRUCTION, DATA, NULL};
    Memory memory;
    LineType lineType;
    int pc;
    int opCode;
    int[] op = new int[4];
    int opLength;
    String label;
    String comment;
    int dataSize;
    int dataValue;
    int dataCount;
    int pass;

    void init (Memory aMemory, int startingAddress) {
      memory      = aMemory;
      pc          = startingAddress;
      lineType    = LineType.NULL;
      comment     = "";
      label       = "";
    }

    public void checkSyntax (Memory aMemory, int startingAddress) throws Assembler.AssemblyException {
      init (aMemory, startingAddress);
      pass = 0;
      try {
        program ();
      } catch (RecognitionException e) {
        throw new Assembler.AssemblyException ("");
      }
    }

    public void passOne (Memory aMemory, int startingAddress) throws Assembler.AssemblyException {
      init (aMemory, startingAddress);
      pass = 1;
      try {
        program ();
      } catch (RecognitionException e) {
        throw new Assembler.AssemblyException ("");
      }
    }

    public void passTwo (Memory aMemory, int startingAddress) throws Assembler.AssemblyException {
      init (aMemory, startingAddress);
      pass = 2;
      try {
        program ();
      } catch (RecognitionException e) {
        throw new Assembler.AssemblyException ("");
      }
    }

    @Override
    public void emitErrorMessage(String msg) {
      throw new Assembler.AssemblyException (msg);
    }

    int getLabelValue (String label) {
      Integer value = memory.getLabelMap ().getAddress (label);
      if (value==null) {
        if (pass==1)
          value = pc;
        else
          emitErrorMessage (String.format ("Label not found: %s at address %d", label, pc));
      }
      return value.intValue ();
    }

    void writeLine () throws RecognitionException {
      MemoryCell cell = null;
      switch (lineType) {
        case INSTRUCTION:
          try {
            cell = Instruction.valueOf (memory, pc, opCode, op, label, comment);
            if (cell==null)
              throw new RecognitionException ();
            if (pass==1 && !label.trim ().equals ("")) 
              memory.addLabelOnly (cell);
            else if (pass==2)
              memory.add (cell);
            label = "";
            comment = "";
            pc += cell.length ();
          } catch (IndexOutOfBoundsException e) {
            throw new RecognitionException ();
          }
          break;
        case DATA:
          for (int i=0; i<dataCount; i++) {
            cell = Datum.valueOf (memory, pc, dataValue, dataSize, label, comment);
            if (cell==null)
              throw new RecognitionException ();
            if (pass==1 && !label.trim ().equals (""))
              memory.addLabelOnly (cell);
            else if (pass==2)
              memory.add (cell);
            label = "";
            comment = "";
            pc += dataSize;
          }
          label = "";
          comment = "";
          break;
        default:
      }
      lineType = LineType.NULL;
      op[0]=0;
      op[1]=0;
      op[2]=0;
      op[3]=0;
    }



    // $ANTLR start "program"
    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:144:1: program : ( line )* ( lineZ )? ;
    public final void program() throws RecognitionException {
        try {
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:144:9: ( ( line )* ( lineZ )? )
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:144:11: ( line )* ( lineZ )?
            {
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:144:11: ( line )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:144:11: line
            	    {
            	    pushFollow(FOLLOW_line_in_program46);
            	    line();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:144:17: ( lineZ )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==Identifier||(LA2_0 >= 28 && LA2_0 <= 32)||(LA2_0 >= 34 && LA2_0 <= 71)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:144:17: lineZ
                    {
                    pushFollow(FOLLOW_lineZ_in_program49);
                    lineZ();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "line"
    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:1: line : ( labelDeclaration )? ( instruction | directive )? ( NewLine | ( Comment ) ) ;
    public final void line() throws RecognitionException {
        Token Comment1=null;

        try {
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:6: ( ( labelDeclaration )? ( instruction | directive )? ( NewLine | ( Comment ) ) )
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:8: ( labelDeclaration )? ( instruction | directive )? ( NewLine | ( Comment ) )
            {
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:8: ( labelDeclaration )?
            int alt3=2;
            switch ( input.LA(1) ) {
                case Identifier:
                    {
                    alt3=1;
                    }
                    break;
                case 64:
                    {
                    int LA3_2 = input.LA(2);

                    if ( (LA3_2==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 44:
                    {
                    int LA3_3 = input.LA(2);

                    if ( (LA3_3==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 69:
                    {
                    int LA3_4 = input.LA(2);

                    if ( (LA3_4==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 41:
                    {
                    int LA3_5 = input.LA(2);

                    if ( (LA3_5==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 40:
                    {
                    int LA3_6 = input.LA(2);

                    if ( (LA3_6==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 37:
                    {
                    int LA3_7 = input.LA(2);

                    if ( (LA3_7==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 42:
                    {
                    int LA3_8 = input.LA(2);

                    if ( (LA3_8==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 39:
                    {
                    int LA3_9 = input.LA(2);

                    if ( (LA3_9==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 38:
                    {
                    int LA3_10 = input.LA(2);

                    if ( (LA3_10==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 50:
                    {
                    int LA3_11 = input.LA(2);

                    if ( (LA3_11==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 68:
                    {
                    int LA3_12 = input.LA(2);

                    if ( (LA3_12==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 62:
                    {
                    int LA3_13 = input.LA(2);

                    if ( (LA3_13==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 34:
                    {
                    int LA3_14 = input.LA(2);

                    if ( (LA3_14==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 70:
                    {
                    int LA3_15 = input.LA(2);

                    if ( (LA3_15==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 35:
                    {
                    int LA3_16 = input.LA(2);

                    if ( (LA3_16==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 71:
                    {
                    int LA3_17 = input.LA(2);

                    if ( (LA3_17==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 63:
                    {
                    int LA3_18 = input.LA(2);

                    if ( (LA3_18==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 43:
                    {
                    int LA3_19 = input.LA(2);

                    if ( (LA3_19==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 61:
                    {
                    int LA3_20 = input.LA(2);

                    if ( (LA3_20==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 57:
                    {
                    int LA3_21 = input.LA(2);

                    if ( (LA3_21==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 56:
                    {
                    int LA3_22 = input.LA(2);

                    if ( (LA3_22==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 53:
                    {
                    int LA3_23 = input.LA(2);

                    if ( (LA3_23==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 59:
                    {
                    int LA3_24 = input.LA(2);

                    if ( (LA3_24==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 55:
                    {
                    int LA3_25 = input.LA(2);

                    if ( (LA3_25==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 54:
                    {
                    int LA3_26 = input.LA(2);

                    if ( (LA3_26==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 36:
                    {
                    int LA3_27 = input.LA(2);

                    if ( (LA3_27==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 66:
                    {
                    int LA3_28 = input.LA(2);

                    if ( (LA3_28==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 65:
                    {
                    int LA3_30 = input.LA(2);

                    if ( (LA3_30==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 45:
                    {
                    int LA3_31 = input.LA(2);

                    if ( (LA3_31==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 51:
                    {
                    int LA3_32 = input.LA(2);

                    if ( (LA3_32==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 46:
                    {
                    int LA3_33 = input.LA(2);

                    if ( (LA3_33==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 52:
                    {
                    int LA3_34 = input.LA(2);

                    if ( (LA3_34==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 49:
                    {
                    int LA3_35 = input.LA(2);

                    if ( (LA3_35==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 47:
                    {
                    int LA3_36 = input.LA(2);

                    if ( (LA3_36==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 48:
                    {
                    int LA3_37 = input.LA(2);

                    if ( (LA3_37==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 60:
                    {
                    int LA3_38 = input.LA(2);

                    if ( (LA3_38==33) ) {
                        alt3=1;
                    }
                    }
                    break;
                case 58:
                    {
                    int LA3_39 = input.LA(2);

                    if ( (LA3_39==33) ) {
                        alt3=1;
                    }
                    }
                    break;
            }

            switch (alt3) {
                case 1 :
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:9: labelDeclaration
                    {
                    pushFollow(FOLLOW_labelDeclaration_in_line59);
                    labelDeclaration();

                    state._fsp--;


                    }
                    break;

            }


            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:28: ( instruction | directive )?
            int alt4=3;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0 >= 34 && LA4_0 <= 71)) ) {
                alt4=1;
            }
            else if ( ((LA4_0 >= 28 && LA4_0 <= 32)) ) {
                alt4=2;
            }
            switch (alt4) {
                case 1 :
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:30: instruction
                    {
                    pushFollow(FOLLOW_instruction_in_line65);
                    instruction();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:44: directive
                    {
                    pushFollow(FOLLOW_directive_in_line69);
                    directive();

                    state._fsp--;


                    }
                    break;

            }


            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:57: ( NewLine | ( Comment ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==NewLine) ) {
                alt5=1;
            }
            else if ( (LA5_0==Comment) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:59: NewLine
                    {
                    match(input,NewLine,FOLLOW_NewLine_in_line76); 

                    }
                    break;
                case 2 :
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:69: ( Comment )
                    {
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:69: ( Comment )
                    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:146:70: Comment
                    {
                    Comment1=(Token)match(input,Comment,FOLLOW_Comment_in_line81); 

                     comment = (Comment1!=null?Comment1.getText():null).substring(1).trim(); 

                    }


                    }
                    break;

            }


            writeLine ();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "line"



    // $ANTLR start "lineZ"
    // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:149:1: lineZ : ( labelDeclaration )? ( instruction | directive ) ( EOF | ( CommentZ ) ) ;
    public final void lineZ() throws RecognitionException {
        Token CommentZ2=null;

        try {
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:149:7: ( ( labelDeclaration )? ( instruction | directive ) ( EOF | ( CommentZ ) ) )
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:149:9: ( labelDeclaration )? ( instruction | directive ) ( EOF | ( CommentZ ) )
            {
            // /Users/feeley/Documents/Work/Courses/SimpleMachine/Grammar/Source/AsmY86.g:149:9: ( labelDeclaration )?
            int alt6=2;
            switch ( input.LA(1) ) {
                case Identifier:
                    {
                    alt6=1;
                    }
                    break;
                case 64:
                    {
                    int LA6_2 = input.LA(2);

                    if ( (LA6_2==33) ) {
                        alt6=1;
                    }
                    }
                    break;
                case 44:
                    {
                    int LA6_3 = input.LA(2);

                    if ( (LA6_3==33) ) {
                        alt6=1;
                    }
                    }
                    break;
                case 69:
                    {
                    int LA6_4 = input.LA(2);

                    if ( (LA6_4==33) ) {
                        alt6=1;
                    }
                    }
                    break;
                case 41:
                    {
                    int LA6_5 = input.LA(2);

                    if ( (LA6_5==33) ) {
                        alt6=1;
                    }
                    }
                    break;
                case 40:
                    {
                    int LA6_6 = input.LA(2);

                    if ( (LA6_6==33) ) {
                        alt6=1;
                    }
                    }
                    break;
                case 37:
                    {
                    int LA6_7 = input.LA(2);
